# hfu-ain-1-programming

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
projects/tic-tac-toe/: main.cpp  spielfeld.cpp  spielfeld.hh
projects/tic-tac-toe/utils/: player.cpp  player.h  validation.cpp  validation.h
tasks/01-18-24/: task-01.cpp
tasks/01-18-24/types/: SafeArray.h  Test.h
tasks/01-18-24/utils/: SafeArray.cpp
tasks/10-12-23/task-01/: documentation.md  task-01.cpp
tasks/10-19-23/: task-01.cpp  task-02.cpp  task-03.cpp  task-04.cpp  task-05.cpp
tasks/10-26-23/: task-01.cpp  task-02.cpp  task-03.cpp  task-04.cpp  task-05.cpp
tasks/11-09-23/: task-01.cpp  task-02.cpp  task-03.cpp  task-04.cpp  task-05.cpp  task-06.cpp
tasks/11-16-23/: task-01.cpp  task-02.cpp  task-03.cpp  task-04.cpp  task-05.cpp  task-06.cpp  task-07.cpp  task-08.cpp
tasks/11-23-23/: task-01.cpp  task-02.cpp  task-03.cpp  task-04.cpp  task-05.cpp  task-06.cpp  task-07.cpp
tasks/11-30-23/: task-01.cpp  task-02.cpp  task-03.cpp  task-04.cpp  task-05.cpp  task-06.cpp
tasks/12-07-23/: task-01.cpp  task-02.cpp  task-03.cpp  task-04.cpp  task-05.cpp  task-06.cpp  task-07.cpp
tasks/12-07-23/types/: date.hpp  person.hpp  point.hpp  vector.hpp
tasks/12-14-23/: task-01.cpp  task-02.cpp  task-03.cpp
tasks/12-14-23/types/: stack.h
tasks/12-14-23/utils/: stack.cpp
tasks/12-21-23/: CMakeLists.txt  task-01.cpp
tasks/12-21-23/types/: SafeArray.h  Test.h
tasks/12-21-23/utils/: SafeArray.cpp  Test.cpp
